--- a/mongooseExpress/views/products/edit.ejs
+++ b/mongooseExpress/views/products/edit.ejs
@@ -16,9 +16,9 @@
         <input type="number" name="price" id="price" placeholder="Price" value="<%= product.price %>" >
         <label for="category">Category</label>
         <select name="category" id="category">
-            <option value="fruit">Fruit</option>
-            <option value="vegetable">Vegetable</option>
-            <option value="dairy">Dairy</option>
+            <% for(let category of categories) {%>
+                <option value="<%= category %>" <%= product.category === category ? 'selected' : '' %> ><%= category %></option>
+            <% } %>
         </select>
         <button>Submit</button>
     </form>
