--- a/mongooseExpress/views/products/new.ejs
+++ b/mongooseExpress/views/products/new.ejs
@@ -8,8 +8,11 @@
 </head>
 
 <body>
-    <h1>Add a Product</h1>
-    <form action="/products" method="POST">
+    <h1>
+        <%= farm.name %>
+    </h1>
+    <h2>Add a Product</h2>
+    <form action="/farms/<%=farm._id%>/products" method="POST">
         <label for="name">Product Name</label>
         <input type="text" name="name" id="name" placeholder="Product Name">
         <label for="price">Price (Unit)</label>
@@ -17,11 +20,15 @@
         <label for="category">Category</label>
         <select name="category" id="category">
             <% for(let category of categories) {%>
-                <option value="<%= category %>"><%= category %></option>
-            <% } %>
+                <option value="<%= category %>">
+                    <%= category %>
+                </option>
+                <% } %>
         </select>
         <button>Submit</button>
+
     </form>
+    <a href="/farms/<%= farm._id %>">Back to Farm</a>
 
 </body>
 
