--- a/mongooseExpress/views/farms/index.ejs
+++ b/mongooseExpress/views/farms/index.ejs
@@ -8,12 +8,17 @@
 </head>
 
 <body>
-    <h1>All Farms</h1>
-    <ul>
-        <% for(let farm of farms) { %>
-            <li><a href="/farms/<%= farm._id %>"><%= farm.name %></a></li>
-            <% } %>
-    </ul>
+    <%= messages %>
+        <h1>All Farms</h1>
+        <ul>
+
+            <% for(let farm of farms) { %>
+                <li><a href="/farms/<%= farm._id %>">
+                        <%= farm.name %>
+                    </a></li>
+                <% } %>
+        </ul>
+        <a href="/farms/new">Add Farm</a>
 </body>
 
 </html>
